=== master

* Support caching of repeated calls to *_pks getter method in the association_pks plugin using :cache_pks association option (jeremyevans)

* Add *_pks_dataset methods for one_to_many and many_to_many associations when using the association_pks plugin (jeremyevans)

=== 5.33.0 (2020-06-01)

* Support custom join types on a per-association basis when using eager_graph/association_join (jeremyevans)

* Support primary_key with type: :smallserial on PostgreSQL (j-a-m-l) (#1698)

* Add Database#current_timestamp_utc accessor on SQLite to keep CURRENT_* in UTC instead of converting to localtime (jeremyevans)

=== 5.32.0 (2020-05-01)

* Allow Database#create_table? work with :partition_of option on PostgreSQL (jeremyevans) (#1690)

* Add fiber_concurrency extension, for using Fiber.current instead of Thread.current for checking out connections (jeremyevans)

* Move most Sequel singleton methods into a module that extends Sequel for easier overriding (jeremyevans)

* Fix method visibility issues in model, plugin, extension, and adapter code (jeremyevans)

* Avoid defining conversion procs for PostgreSQL inet/cidr types in pg_inet extension when using sequel_pg 1.13.0+ (jeremyevans)

* Add run_transaction_hooks Database extension, allowing for running the transaction hooks before commit/rollback, for use with transactional testing (jeremyevans)

* Recognize timestamp(N) with time zone type (isc) (#1684)

=== 5.31.0 (2020-04-01)

* Fix alter_table drop_constraint :primary_key option on SQLite for non-integer primary keys (jeremyevans)

* Add skip_saving_columns plugin, which supports columns to skip when saving, and skips generated columns by default (joeosburn, jeremyevans) (#1681, #1682)

* Add support for creating partitioned tables in PostgreSQL 10+ using :partition_by and :partition_of options (jeremyevans)

* Dump generated columns as generated columns when using the schema_dumper with :same_db option on PostgreSQL 12+ (jeremyevans) (#1680)
